@startuml
title Class Diagram

class Activity
class ActionBarActivity
class SplashScreen
class MainActivity
class PrinterController
class snmpServer
class Printer
class dbHandler
class SQLiteOpenHelper
class LevelAdapter
class printTask
class AsynchTask<String, Void, String>
class PrinterHolder

Activity <|- ActionBarActivity
MainActivity --|> ActionBarActivity
MainActivity +-- printTask
printTask --|> AsynchTask
SplashScreen --|> Activity
PrinterController ---|> ActionBarActivity
snmpServer ---|> Activity
dbHandler --|> SQLiteOpenHelper
LevelAdapter --|> ArrayAdapter
LevelAdapter +-- PrinterHolder

SplashScreen : #onCreate(savedInstanceState : Bundle) : void

MainActivity : +prntStat : snmpServer
MainActivity : +db : dbHandler
MainActivity : +pList : ArrayList<Printer>
MainActivity : #onCreate(savedInstanceState : Bundle) : void
MainActivity : +onCreateOptionsMenu(menu : Menu) : boolean
MainActivity : +onOptionsItemSelected(item : MenuItem) : boolean
MainActivity : #onActivityResult(requestCode : int, resultCode : int, data : Intent) : void
MainActivity : +drawChart(color : int, height : int) : void

printTask : -pdialog : ProgressDialog
printTask : +linearChart : LinearLayout
printTask : +title : TextView
printTask : +pList : ArrayList<Printer>
printTask : +p : Printer
printTask : #onPreExecute() : void
printTask : #doInBackground(params : String[]) : String
printTask : #onPostExecute(str : String) : void

PrinterController : +addPrinter : Button
PrinterController : +db : dbHandler
PrinterController : #onCreate(savedInstanceState : Bundle) : void
PrinterController : +editItemAlert(position : int) : void
PrinterController : +updateList(list : ListView) : void
PrinterController : #onPause() : void

snmpServer : +getPrintStatus(strIPAddress : String, community : String, iSNMPVersion : int, strOID : String) : int

Printer : +mIpAddr : String
Printer : +mName : String
Printer : +mPrinterID : long
Printer : +cVal : int
Printer : +mVal : int
Printer : +yVal : int
Printer : +kVal : int
Printer : +setPrinterName(PrinterName : String) : void
Printer : +setID(pID : long) : void
Printer : +setIP(pIP : String) : void
Printer : +setkVal(bVal : int) : void
Printer : +setcVal(cVal : int) : void
Printer : +setmVal(mVal : int) : void
Printer : +setyVal(yVal : int) : void
Printer : +getPrinterName() : String
Printer : +getIP() : String
Printer : +getID() : long
Printer : +getyVal() : int
Printer : +getmVal() : int
Printer : +getcVal() : int
Printer : +getkVal() : int


dbHandler : + dbHandler(context : Context) : dbHandler
dbHandler : + onCreate(db : SQLiteDatabase) : void
dbHandler : + onUpgrade(db : SQLiteDatabase, oldVersion : int, newVersion : int) : void
dbHandler : + addPrinter(p : Printer) : void
dbHandler : + getPrinter(id : int) : Printer
dbHandler : + getAllPrinters() : ArrayList<Printer>
dbHandler : + updatePrinter(p : Printer) : int
dbHandler : + deletePrinter(p : Printer) : void

LevelAdapter : +context : Context
LevelAdapter : +layoutResourceId : int
LevelAdapter : +data : ArrayList<Printer>
LevelAdapter : +LevelAdapter(context : Context, layoutResourceId : int, data : ArrayList<Printer>) : LevelAdapter
LevelAdapter : +getItemId(position : int) : long
LevelAdapter : +getView(position : int, convertView : View, parent : ViewGroup) : View

PrinterHolder : +txtTitle : TextView
PrinterHolder : +txtTitle2 : TextView
PrinterHolder : +txtTitle3 : TextView

MainActivity "1" -- "1" PrinterController : launches >
MainActivity "1" - "1" snmpServer : calls >

PrinterController "1" -- "1" Printer : adds >
PrinterController"1" *--- "1"dbHandler : contains >
PrinterController"1" *- "1"LevelAdapter : contains >

@enduml